syntax = "proto3";

package userpb;
option go_package = "./;userpb";

message GetUsersRequest {}

message GetUserResponse {
    string id = 1;
    string name = 2;
    int32 age = 3;
    string greeting = 4;
}

message GetUsersResponse {
    repeated GetUserResponse users = 1;
}

service UserService {
    rpc GetUsers(GetUsersRequest) returns (GetUsersResponse) {};
}